--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/MultiverseLearningProducts/Reactive-Weather#readme",
   "dependencies": {
-    "parcel": "^2.8.3",
+    "dotenv": "^16.4.5",
+    "parcel": "^2.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
